--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 theme = "TechBlog"
 languageCode = "en-us"
-baseurl = "http://example.com/"
+baseurl = "https://tech-globe.netlify.app/"
 title = "TechGlobe"
 
 author = "Max Muster"
