--- a/config.toml
+++ b/config.toml
@@ -6,10 +6,13 @@ title = "TechGlobe"
 author = "Max Muster"
 copyright = "Copyright © 2022, Max Muster, all rights reserved."
 
+
+enableRobotsTXT = true
+
 [params]
     name = "TechGlobe"
     subtitle = "Stay up-to-date with tech"
-    description = "A world renowend blog covering the worlds latest news in Tech."
+    description = "A world renowend blog covering the worlds latest news in Tech with Journalists all around the Globe."
     favicon = "favicon.ico"
 
     instagram = "https://www.instagram.com/"
@@ -21,7 +24,10 @@ copyright = "Copyright © 2022, Max Muster, all rights reserved."
 [build]
   writeStats = true
 
-
+[sitemap]
+  changefreq = "weekly"
+  filename = "sitemap.xml"
+  priority = 0.5
 
 
 [imaging]
